# rs-getter

./: .gitignore  Cargo.toml  README.md
src/: client.rs  client_mode.rs  detector.rs  error.rs  getter.rs  lib.rs
src/detector/: bitbucket.rs  file.rs  git.rs  github.rs  gitlab.rs  ssh.rs
src/getter/: git.rs  http.rs
tests/: bitbucket_detector.rs  detect.rs  file_detector.rs  git_detector.rs  github_detector.rs  gitlab_detector.rs
