[package]
name = "getter"
version = "0.1.0"
authors = ["Blessan Abraham <meetblessan@gmail.com>"]
edition = "2021"

[badges]
is-it-maintained-issue-resolution = { repository = "blessanabraham/rs-getter" }
is-it-maintained-open-issues = { repository = "blessanabraham/rs-getter" }
maintenance = { status = "actively-developed" }

[features]

[dependencies]
async-trait = "0.1"
bzip2-rs = "0.1.2"
cfg-if = "1.0"
env_logger = "0.8"
futures-util = "0.3.15"
lazy_static = "1.4"
log = "0.4"
regex = "1"
serde = { version = "1.0", default_features = false, features = ["derive"] }
url = "2.2"

[target."cfg(not(target_arch = \"wasm32\"))".dependencies]
hyper = { version = "0.14", default-featuers = false, features = ["client", "http1", "tcp", "stream"] }
hyper-tls = "0.5"
serde_json = { version = "1.0", default-features = false, features = ["std"]}
tokio = { version = "1", features = ["fs", "macros", "rt"] }
tokio-stream = "0.1"

[target."cfg(target_arch = \"wasm32\")".dependencies]
js-sys = "0.3.51"
serde_json = { version = "1.0", default-features = false }
wasm-bindgen = { version = "0.2.74", features = ["serde-serialize"] }
wasm-bindgen-futures = "0.4.24"

[dev-dependencies]
tempdir = "0.3.7"

[target."cfg(target_arch = \"wasm32\")".dev-dependencies]
wasm-bindgen-test = "0.3"
